--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,43 @@
-/* This is a placeholder until we write some CSS*/
+
+body {
+background: linear-gradient(to bottom right, #f0f4ff, #d5e1ff);
+}
+
+#containment-wrapper {
+position: relative;
+height: 400px;
+border: 2px dashed #999;
+border-radius: 10px;
+background: #ffffffaa;
+backdrop-filter: blur(3px);
+}
+
+#sonic-pic {
+cursor: grab;
+}
+
+#sonic-meme-pic:active {
+cursor: grabbing;
+}
+
+.score-box {
+cursor: grab;
+}
+
+#sonic-meme-pic:active {
+cursor: grabbing;
+}
+
+.score-box {
+background: #fff;
+padding: 20px;
+border-radius: 10px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+
+}
+
+.navbar-brand {
+font-size: 18px;
+font-weight: bold;
+}
+
